@@ -4,6 +4,7 @@ Changes from V8.5beta2 to ...
 Vernacular commands
 
 - New command "Redirect" to redirect the output of a command to a file.
+- New command "Undelimit Scope" to remove the delimiter of a scope.
 
 Tactics
 
